--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@mui/x-date-pickers": "^7.0.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.109.2",
+    "@types/d3-array": "^3.2.2",
+    "d3-array": "^3.2.4",
     "d3-fetch": "^3.0.1",
     "dayjs": "^1.11.10",
     "plotly.js": "^2.30.1",
