--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.109.2",
     "@types/d3-array": "^3.2.2",
+    "@types/plotly.js": "^3.0.7",
     "d3-array": "^3.2.4",
     "d3-fetch": "^3.0.1",
     "dayjs": "^1.11.10",
-    "plotly.js": "^2.30.1",
+    "plotly.js": "^2.35.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0"
